Closed
Bug 160973
Opened 23 years ago
Closed 21 years ago
gtk assertion on installer exit from auto-mode
Categories
(SeaMonkey :: Installer, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: ajschult784, Assigned: ajschult784)
References
Details
Attachments
(1 file, 1 obsolete file)
|
1.42 KB,
patch
|
dveditz
:
review+
bryner
:
superreview+
|
Details | Diff | Splinter Review |
When the running the installer in auto-mode (./mozilla-installer -ma), this
message appears in my console when it finishes:
Gtk-CRITICAL **: file gtkmain.c: line 582 (gtk_main_quit): assertion `main_loops
!= NULL' failed.
Updated•23 years ago
|
QA Contact: bugzilla → ktrina
| Assignee | ||
Comment 1•23 years ago
|
||
normal mode fires off gtk_main() to run the wizard. auto mode does not.
the gtk_main_quit() in ShowCompleteDlg() actually corresponds to that
gtk_main() and should not be called for the auto mode.
Closing out the wizard seems like something that should be done quite a bit
upstream. I moved it to PerformInstall(), although it could probably go up
farther.
| Assignee | ||
Updated•23 years ago
|
Attachment #107671 -
Flags: review?(sgehani)
| Assignee | ||
Comment 3•22 years ago
|
||
Comment on attachment 107671 [details] [diff] [review]
patch2
still looking for review-love
Attachment #107671 -
Flags: review?(sgehani) → review?(ssu)
Comment 5•21 years ago
|
||
Andrew: Do you work on linux installer bugs? Does this patch work in newer builds?
| Assignee | ||
Comment 6•21 years ago
|
||
this implements my own suggestion about moving gtk_main_quit farther upstream.
This patch just removes gtk_main_quit from ShowCompleteDlg and the check for
bDLCancel (set when the download is cancelled). The check seems totally bogus
because gtk_main is not called in relation to downloading the XPIs.
I tested both normal and auto mode for the cases of:
1. cancelling the download
2. not cancelling the download
3. having the XPIs already downloaded
all 6 tests were successful and no assertions.
Attachment #107671 -
Attachment is obsolete: true
| Assignee | ||
Updated•21 years ago
|
Attachment #140211 -
Attachment is patch: true
Attachment #140211 -
Flags: review?(dveditz+bmo)
| Assignee | ||
Updated•21 years ago
|
Attachment #107671 -
Flags: review?(ssu0262)
| Assignee | ||
Comment 7•21 years ago
|
||
> Andrew: Do you work on linux installer bugs?
if they're relatively simple. but someone has to review them.
QA Contact: ktrina → nobody
Comment 8•21 years ago
|
||
Comment on attachment 140211 [details] [diff] [review]
patch3
r=dveditz
Attachment #140211 -
Flags: review?(dveditz+bmo) → review+
| Assignee | ||
Comment 9•21 years ago
|
||
Comment on attachment 140211 [details] [diff] [review]
patch3
thanks dveditz!
looking for more review-love.
Attachment #140211 -
Flags: superreview?(bryner)
Updated•21 years ago
|
Attachment #140211 -
Flags: superreview?(bryner) → superreview+
| Assignee | ||
Comment 10•21 years ago
|
||
biesi: can you check in this patch?
thanks!
Comment 11•21 years ago
|
||
Checking in nsInstallDlg.cpp;
/cvsroot/mozilla/xpinstall/wizard/unix/src2/nsInstallDlg.cpp,v <--
nsInstallDlg.cpp
new revision: 1.27; previous revision: 1.26
done
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
Updated•21 years ago
|
Product: Browser → Seamonkey
You need to log in
before you can comment on or make changes to this bug.
Description
•