bug 160973 patch by Andrew Schultz <ajschult@eos.ncsu.edu> r=dveditz sr=bryner fix gtk assertions on installer exit from auto-mode